# blynclight

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
blynclight/: __init__.py  __main__.py  bitvector.py  blynclight.py  cli_options.py  constants.py  effects.py  exceptions.py  oldlight.py  proxy.py
blynclight/effects/: __init__.py  spectrum.py
blynclight/hid/: __init__.py
blynclight/scripts/: blync.py  fli.py  rainbow.py  throbber.py
blynclight_api/: Makefile  README.rst  blynclight_api.c  blynclight_api.h
contrib/: blync.py  blyncd.py  blyncd_apistar.py  blyncd_hug.py  blynclight.html  fli.py  hug-blyncd.py  hug_blyncd.py  rainbow.py  rainbow2.py  throbber.py
sdk/: Makefile  Makefile.Darwin  Makefile.Linux  README.rst  blynclight_api.c  blynclight_api.h  linux_patch.c  linuxapi.txt  macos_patch.c  macosapi.txt  patch.c  patch.h
src/blynclight/: __init__.py  blynclight.py  blynclight2.py  color.py  constants.py  devicetype.py  exceptions.py  flashspeed.py  proxy.py
src/blynclight/hid/: __init__.py
tests/: blynclight_api_dev.py  conftest.py  test_blynclight.py  test_blynclight_dev.py  test_blynclight_hid.py  test_blynclight_nodev.py  test_cli_common.py
