
[tool.poetry]
name = "blynclight"
version = "0.8.2"
description = "Python language bindings for Embrava BlyncLight devices."
authors = ["Erik O'Shaughnessy <erik.oshaughnessy@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/JnyJny/blynclight.git"
classifiers = [
    	    "Development Status :: 4 - Beta",
	    "Environment :: Console",
	    "Intended Audience :: Developers",
	    "License :: OSI Approved :: Apache Software License",
	    "Programming Language :: Python :: 3.6",
	    "Programming Language :: Python :: 3.7",
	    "Topic :: Artistic Software",
	    "Topic :: Multimedia :: Sound/Audio",
	    "Topic :: Utilities",
	    "Topic :: System :: Hardware",
]

[tool.poetry.scripts]
blync = "blynclight.__main__:cli"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
requests = "^2.21"
typer = "^0.2.1"
hidapi = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
pre-commit = "^1.15"
black = "^18.3-alpha.0"
typer-cli = "^0.0.9"
hidapi = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
