
[tool.poetry]
name = "blynclight"
version = "0.12.0"
description = "Python language bindings for Embrava BlyncLight devices."
authors = ["Erik O'Shaughnessy <erik.oshaughnessy@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/JnyJny/blynclight.git"
classifiers = [
    	    "Development Status :: 4 - Beta",
	    "Environment :: Console",
	    "Intended Audience :: Developers",
	    "License :: OSI Approved :: Apache Software License",
	    "Programming Language :: Python :: 3.6",
	    "Programming Language :: Python :: 3.7",
	    "Topic :: Artistic Software",
	    "Topic :: Multimedia :: Sound/Audio",
	    "Topic :: Utilities",
	    "Topic :: System :: Hardware",
]

[tool.poetry.scripts]
blync = "blynclight.__main__:cli"

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0"
hidapi = "^0"
loguru = "^0.5.1"
bitvector-for-humans = "^0"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
typer-cli = "^0.0.9"
hidapi = "^0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
